# mate-icon-theme

./: .build.yml  .travis.yml  AUTHORS  ChangeLog  Makefile.am  NEWS  autogen.sh  configure.ac  index.theme.in.in  makepot  mate-icon-theme.pot
.github/workflows/: archlinux.sh  debian.sh  fedora.sh  release.yml  ubuntu.sh
.tx/: config  config_20221028214812.bak
distro/archlinux/: PKGBUILD
distro/ubuntu/: build
mate/: Makefile.am
mate/128x128/status/: Makefile.am
mate/16x16/: Makefile.am
mate/16x16/actions/: Makefile.am
mate/16x16/apps/: Makefile.am
mate/16x16/categories/: Makefile.am
mate/16x16/devices/: Makefile.am
mate/16x16/emblems/: Makefile.am
mate/16x16/mimetypes/: Makefile.am
mate/16x16/places/: Makefile.am
mate/16x16/status/: Makefile.am
mate/22x22/: Makefile.am
mate/22x22/actions/: Makefile.am
mate/22x22/apps/: Makefile.am
mate/22x22/categories/: Makefile.am
mate/22x22/devices/: Makefile.am
mate/22x22/emblems/: Makefile.am
mate/22x22/mimetypes/: Makefile.am
mate/22x22/places/: Makefile.am
mate/22x22/status/: Makefile.am
mate/24x24/: Makefile.am
mate/24x24/actions/: Makefile.am
mate/24x24/apps/: Makefile.am
mate/24x24/categories/: Makefile.am
mate/24x24/devices/: Makefile.am
mate/24x24/emblems/: Makefile.am
mate/24x24/mimetypes/: Makefile.am
mate/24x24/places/: Makefile.am
mate/24x24/status/: Makefile.am
mate/256x256/: Makefile.am
mate/256x256/actions/: Makefile.am
mate/256x256/apps/: Makefile.am
mate/256x256/categories/: Makefile.am
mate/256x256/devices/: Makefile.am
mate/256x256/emblems/: Makefile.am
mate/256x256/mimetypes/: Makefile.am
mate/256x256/places/: Makefile.am
mate/256x256/status/: Makefile.am
mate/32x32/actions/: Makefile.am
mate/32x32/apps/: Makefile.am
mate/32x32/categories/: Makefile.am
mate/32x32/devices/: Makefile.am
mate/32x32/emblems/: Makefile.am
mate/32x32/mimetypes/: Makefile.am
mate/32x32/places/: Makefile.am
mate/32x32/status/: Makefile.am
mate/48x48/actions/: Makefile.am
mate/48x48/apps/: Makefile.am
mate/48x48/categories/: Makefile.am
mate/48x48/devices/: Makefile.am
mate/48x48/emblems/: Makefile.am
mate/48x48/mimetypes/: Makefile.am
mate/48x48/places/: Makefile.am
mate/48x48/status/: Makefile.am
mate/64x64/: Makefile.am
mate/8x8/: Makefile.am
mate/8x8/emblems/: Makefile.am
mate/96x96/status/: Makefile.am
mate/scalable/: Makefile.am
mate/scalable-up-to-32/: Makefile.am
menta/: Makefile.am  index.theme
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  af.po  am.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cmn.po  crh.po  cs.po  cv.po  cy.po  da.po  de.po  de_CH.po  dz.po  el.po  en@shaw.po  en_AU.po  en_CA.po  en_GB.po  en_US.po  eo.po  es.po  es_419.po  es_AR.po  es_CL.po  es_CO.po  es_ES.po  (+105 more)
src/: Makefile.am
