MAKEFLAGS = --silent
MAKEFLAGS += --no-print-directory

NULL =

themedir = $(datadir)/icons/mate

DIMENSIONS = \
	8x8 \
	16x16 \
	22x22 \
	24x24 \
	32x32 \
	48x48 \
	64x64 \
	96x96 \
	256x256 \
	$(NULL)

SUBDIRS = \
	$(DIMENSIONS) \
	scalable \
	scalable-up-to-32 \
	$(NULL)

DIST_SUBDIRS = \
	$(DIMENSIONS) \
	scalable \
	scalable-up-to-32 \
	$(NULL)
